@@ -1,3 +1,14 @@
+2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b78
+
+ All about setup:
+
+ - Text changes / typos.
+ - Disable next/prev button if last/first tab is reached.
+
+ Thanks to Andy.
+
+ - removed function newIn()
+
 2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b77
 
  * Change: Little layout fix for siriux frame.
